--- a/testng-unit/build.gradle
+++ b/testng-unit/build.gradle
@@ -13,7 +13,7 @@ repositories {
 
 dependencies {
     testImplementation 'org.testng:testng:7.5'
-
+    testImplementation 'org.slf4j:slf4j-simple:1.7.35'
 }
 
 test {
