Настроил Gradle для работы с Junit4

--- a/build.gradle
+++ b/build.gradle
@@ -12,10 +12,10 @@ repositories {
 }
 
 dependencies {
-    testImplementation 'org.testng:testng:7.5'
+    testImplementation 'junit:junit:4.13.2'
     testImplementation 'org.slf4j:slf4j-simple:1.7.35'
 }
 
 test {
-    useTestNG()
+    useJUnit()
 }
