--- a/build.gradle
+++ b/build.gradle
@@ -12,11 +12,14 @@ repositories {
 }
 
 dependencies {
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
+
     testImplementation 'junit:junit:4.13.2'
     testRuntimeOnly 'org.junit.vintage:junit-vintage-engine:5.8.2'
     testImplementation 'org.slf4j:slf4j-simple:1.7.35'
 }
 
 test {
-    useJUnit()
+    useJUnitPlatform()
 }
